--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.0",
     "node-fetch": "^2.6.9",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
