--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.8.2"
+    "react-router": "^6.8.2",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
